[package]
name = "wc3builder"
version = "0.1.0"
authors = ["Timofey Sokolov <insomnia.array@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
lalrpop-util = "0.16.2"
regex = "0.2.0"
codespan = "0.2.0"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.16.2"